--- a/index2.html
+++ b/index2.html
@@ -5,38 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Кафедра кібербезпеки та інформаційних технологій</title>
-  <link rel="stylesheet" href="style2.css">
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+  <link rel="stylesheet" href="style2.css">
   <meta name="theme-color" content="#1c1c1c"/>
 </head>
 <body>
   <div class="pure-g">
-    <div class="pure-u-1"> <!-- NAV MENU -->
+    <div class="pure-u-1 l-header"> <!-- NAV MENU -->
       <div class="nav-menu">
+        <div class="nav-menu__burger"><i class="fas fa-bars"></i></div>
+
         <div class="nav-menu__item">Навчальний план</div>
         <div class="nav-menu__item">Освітньо-професійна програма</div>
         <div class="nav-menu__item">Наші досягнення</div>
         <div class="nav-menu__item">Контакти</div>
 
-
-        <label for="hmt">
-          <div class="nav-menu__burger">☰</div>
-        </label>
+        <div class="nav-menu__search"><i class="fas fa-search"></i></div>
       </div>
     </div>
-
-    <input type="checkbox" id="hmt" class="hidden-menu-ticker">
-      <!-- <label class="btn-menu" for="hmt"> -->
-        <span class="first"></span>
-        <span class="second"></span>
-        <span class="third"></span>
-      <!-- </label> -->
-      <ul class="hidden-menu">
-        <div class="">Навчальний план</div>
-        <div class="">Освітньо-професійна програма</div>
-        <div class="">Наші досягнення</div>
-        <div class="">Контакти</div>
-      </ul>
 
     <div class="pure-u-1"><!-- HEADLINE -->
       <div class="headline">
@@ -52,13 +40,15 @@
       </div>
     </div>
 
-    <div class="menu">
-      <div class="menu__item">Новини</div>
-      <div class="menu__item">Викладачі</div>
-      <div class="menu__item">Про кафедру</div>
+    <div class="menu-holder">
+      <div class="menu">
+        <div class="menu__item">Новини</div>
+        <div class="menu__item">Викладачі</div>
+        <div class="menu__item">Про кафедру</div>
+      </div>
     </div>
 
-    <div class="pure-u-1 flex justify-center">
+    <div class="pure-u-1">
 
       <div class="summary-card-holder">
 
