--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,17 @@
         <div class="nav-menu__item">Наші досягнення</div>
         <div class="nav-menu__item">Контакти</div>
 
+        <div class="menu-mobile">
+          <div class="menu-mobile__item">Навчальний план</div>
+          <div class="menu-mobile__item">Освітньо-професійна програма</div>
+          <div class="menu-mobile__item">Наші досягнення</div>
+          <div class="menu-mobile__item">Контакти</div>
+        </div>
+
+        <div class="nav-menu__search-input"><input type="text" name="" id=""></div>
         <div class="nav-menu__search"><i class="fas fa-search"></i></div>
+        <div class="nav-menu__search-cancel"><i class="fas fa-times"></i></div>
+
       </div>
     </div>
 
@@ -109,5 +119,6 @@
     </div>
   </div>
 
+    <script src="./script.js" async defer></script>
 </body>
 </html>
