--- a/index2.html
+++ b/index2.html
@@ -53,9 +53,9 @@
 
     <div class="menu-holder">
       <div class="menu">
-        <div class="menu__item">Новини</div>
-        <div class="menu__item">Викладачі</div>
-        <div class="menu__item">Про кафедру</div>
+        <button class="menu__item">Новини</button>
+        <button class="menu__item">Викладачі</button>
+        <button class="menu__item">Про кафедру</button>
       </div>
     </div>
 
