--- a/index2.html
+++ b/index2.html
@@ -22,16 +22,16 @@
       <div class="nav-menu">
         <div class="nav-menu__burger"><i class="fas fa-bars"></i></div>
 
-        <div class="nav-menu__item">Навчальний план</div>
-        <div class="nav-menu__item">Освітньо-професійна програма</div>
-        <div class="nav-menu__item">Наші досягнення</div>
-        <div class="nav-menu__item">Контакти</div>
+        <a href="#" class="nav-menu__item">Навчальний план</a>
+        <a href="#" class="nav-menu__item">Освітньо-професійна програма</a>
+        <a href="#" class="nav-menu__item">Наші досягнення</a>
+        <a href="#" class="nav-menu__item">Контакти</a>
 
         <div class="menu-mobile">
-          <div class="menu-mobile__item">Навчальний план</div>
-          <div class="menu-mobile__item">Освітньо-професійна програма</div>
-          <div class="menu-mobile__item">Наші досягнення</div>
-          <div class="menu-mobile__item">Контакти</div>
+          <a href="#" class="menu-mobile__item">Навчальний план</a>
+          <a href="#" class="menu-mobile__item">Освітньо-професійна програма</a>
+          <a href="#" class="menu-mobile__item">Наші досягнення</a>
+          <a href="#" class="menu-mobile__item">Контакти</a>
         </div>
 
         <div class="nav-menu__search-input"><input type="text" name="" id=""></div>
