--- a/index_lecturer.html
+++ b/index_lecturer.html
@@ -22,16 +22,16 @@
       <div class="nav-menu">
         <div class="nav-menu__burger"><i class="fas fa-bars"></i></div>
 
-        <div class="nav-menu__item">Навчальний план</div>
-        <div class="nav-menu__item">Освітньо-професійна програма</div>
-        <div class="nav-menu__item">Наші досягнення</div>
-        <div class="nav-menu__item">Контакти</div>
+        <a href="#" class="nav-menu__item">Навчальний план</a>
+        <a href="#" class="nav-menu__item">Освітньо-професійна програма</a>
+        <a href="#" class="nav-menu__item">Наші досягнення</a>
+        <a href="#" class="nav-menu__item">Контакти</a>
 
         <div class="menu-mobile">
-          <div class="menu-mobile__item">Навчальний план</div>
-          <div class="menu-mobile__item">Освітньо-професійна програма</div>
-          <div class="menu-mobile__item">Наші досягнення</div>
-          <div class="menu-mobile__item">Контакти</div>
+          <a href="#" class="menu-mobile__item">Навчальний план</a>
+          <a href="#" class="menu-mobile__item">Освітньо-професійна програма</a>
+          <a href="#" class="menu-mobile__item">Наші досягнення</a>
+          <a href="#" class="menu-mobile__item">Контакти</a>
         </div>
 
         <div class="nav-menu__search-input"><input type="text" name="" id=""></div>
@@ -144,8 +144,8 @@
             61001, м. Харків, просп. Науки, 9А,<br>
             ХНЕУ ім. С. Кузнеця, <br>
             головний навчальний корпус, 3 поверх, ауд. 307.<br>
-              Тел. <a href="tel:+380577021831" data-balloon-pos="up" data-balloon="Детальніша інформація для студента">+38 (057) 702-18-31</a>, <a href="tel:+357" data-balloon-pos="up" data-balloon="Детальніша інформація для студента">3-57</a> (внутрішній)<br>
-            E-mail:             <a href="mailto:soc_sluzba@hneu.edu.ua" data-balloon-pos="up" data-balloon="Детальніша інформація для студента">email: kafkb@hneu.edu.ua</a>
+              Тел. <a href="tel:+380577021831">+38 (057) 702-18-31</a>, <a href="tel:+357">3-57</a> (внутрішній)<br>
+            E-mail:<a href="mailto:soc_sluzba@hneu.edu.ua" >email: kafkb@hneu.edu.ua</a>
 
           </p>
         </div>
@@ -161,10 +161,10 @@
             служби ХНЕУ ім. С. Кузнеця:
           </p>
           <h3>
-            <a href="tel:+0501351519" data-balloon-pos="up" data-balloon="Детальніша інформація для студента">050-13-51-519</a>
+            <a href="tel:+0501351519">050-13-51-519</a>
           </h3>
           <p>
-            <a href="mailto:soc_sluzba@hneu.edu.ua" data-balloon-pos="up" data-balloon="Детальніша інформація для студента">email: soc_sluzba@hneu.edu.ua</a>
+            <a href="mailto:soc_sluzba@hneu.edu.ua">email: soc_sluzba@hneu.edu.ua</a>
           </p>
         </div>
       </div>
@@ -175,7 +175,7 @@
     </div>
   </div>
 
-  <div class="scrollup" onclick="topFunction()"><i class="fas fa-arrow-up"></i></div>
+  <div class="scrollup"><i class="fas fa-arrow-up"></i></div>
 
         <script src="./js/common.js" async defer></script>
 
