modified footer and lecturer.html

--- a/index_lecturer.html
+++ b/index_lecturer.html
@@ -135,6 +135,12 @@
 
     <div class="pure-u-1"> <!-- BADGES -->
       <div class="badges-list">
+      <div class="badges-list__item">
+          <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/badge2.jpg" alt=""></a>
+       </div>
+       <div class="badges-list__item">
+           <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/hneu.png" class="hneu" alt=""></a>
+       </div>
         <div class="badges-list__item">
           <h3>
             Кафедра кібербезпеки<br>
@@ -149,9 +155,10 @@
 
           </p>
         </div>
-        <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/badge1.png" alt="badge1" class="badges-list__item pure-img hide_useless_image"></a>
-        <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/badge2.jpg" alt="badge2" class="badges-list__item pure-img fix-small-image hide_useless_image"></a>
-        <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/badge3.png" alt="badge2" class="badges-list__item pure-img hide_useless_image"></a>
+ 
+        <div class="badges-list__item">
+           <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/badge3.png" class="hneu" alt=""></a>
+          </div>
         <div class="badges-list__item">
           <h3>
             Телефон довіри
