--- a/index_lecturer.html
+++ b/index_lecturer.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Кафедра кібербезпеки та інформаційних технологій</title>
-      <script src="./js/jquery-3.3.1.min.js" async defer></script>
+      <script src="/js/jquery-3.3.1.min.js" async defer></script>
 
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css">
+
     <link rel="stylesheet" href="css/hover-min.css">
   <link rel="stylesheet" href="css/style2.css">
   <meta name="theme-color" content="#1c1c1c"/>
@@ -139,7 +140,7 @@
           <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/badge2.jpg" alt=""></a>
        </div>
        <div class="badges-list__item">
-           <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/hneu.png" class="hneu" alt=""></a>
+           <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/neu2.png" class="hneu" alt=""></a>
        </div>
         <div class="badges-list__item">
           <h3>
@@ -157,7 +158,7 @@
         </div>
  
         <div class="badges-list__item">
-           <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/badge3.png" class="hneu" alt=""></a>
+           <a href="#" data-balloon-pos="up" data-balloon="Детальніша інформація для студента"><img src="./images/badge3.png"  alt=""></a>
           </div>
         <div class="badges-list__item">
           <h3>
@@ -182,7 +183,7 @@
     </div>
   </div>
 
-  <div class="scrollup"><i class="fas fa-arrow-up"></i></div>
+  <div class="scrolalup"><i class="fas fa-arrow-up"></i></div>
 
         <script src="./js/common.js" async defer></script>
 
